# rust-in-action

./: Cargo.toml  README.md  data-in-depth.md
.github/workflows/: rust.yml
chapter/data-in-depth/: README.md
chapter/data-in-depth/ch8/: Cargo.toml
chapter/data-in-depth/ch8/src/: ch_8.rs  main.rs
chapter/data-in-depth/fixed-point/: Cargo.toml
chapter/data-in-depth/floating-point-numbers/: Cargo.toml
chapter/data-in-depth/floating-point-numbers/src/: main.rs
chapter/one/compound-data-struct/: Cargo.toml
chapter/one/compound-data-struct/src/: main.rs
chapter/one/testing/: Cargo.toml  test_file.txt
chapter/one/testing/src/: main.rs
