[package]
name = "testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.10", features = ["derive", "cargo"]}
regex = "1.10.2"
